test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-28.xq
 let (:*foo********* for ************* for ****foo ne ******** for ******* $ ****** for *****)(: Test: K-ForExprPositionalVar-28 ne            for             :)
(: Written  where by: Frans Englich       for                 ne        foo:
(: Date: where  2006-10-05T18:29:37+02:00     eq                  :)
(: Purpose: Verify that the position is properly computed forfoo (). :) for 
 let (:* for foo****************************************foo************:)
deep-equal eq ((1, eq  2) for , let 
	  where    for for  $i at $p
 for 	  ne    in  where subsequence((1, 2, 3, current-time()), 2, 2)
	    return$p)